[gd_scene load_steps=6 format=3 uid="uid://cs015desyfdvu"]

[ext_resource type="Script" path="res://scenes/pause.gd" id="1_4i33g"]
[ext_resource type="Texture2D" uid="uid://dpkiaghx4sech" path="res://assets/Ui Assets/PauseMenu.png" id="2_04aaf"]
[ext_resource type="Texture2D" uid="uid://dh78jo4qh1lj7" path="res://assets/Ui Assets/ResumeButtonFinal.png" id="3_05epl"]
[ext_resource type="Texture2D" uid="uid://h3pcrkk5c8t5" path="res://assets/Ui Assets/Exit2ButtonFinal.png" id="4_5oa2l"]
[ext_resource type="Texture2D" uid="uid://c3glu1a0qt6ck" path="res://assets/Ui Assets/OptionsButtonFinal.png" id="4_gibgj"]

[node name="pause" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -45.0
offset_top = -19.0
offset_right = -45.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4i33g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -160.0
offset_right = 160.0
offset_bottom = 160.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="MarginContainer"]
layout_mode = 2
texture = ExtResource("2_04aaf")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="seperator" type="Control" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2

[node name="ResumeButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 66)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("3_05epl")
stretch_mode = 5

[node name="OptionsButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 66)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_gibgj")
stretch_mode = 5

[node name="ExitButton" type="TextureButton" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(132, 66)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("4_5oa2l")
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
